--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,6 +8,10 @@ body {
   font-family: Montserrat, sans-serif;
 }
 
+a {
+  text-decoration: none;
+}
+
 .container {
   max-width: 1200px;
   margin: 0 auto;
