--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -323,5 +323,13 @@ h1 {
     padding-right: 24px;
   }
 }
+@media (max-width: 376px) {
+  h1 {
+    font-weight: 700;
+    font-size: 40px;
+    text-align: center;
+    color: #202027;
+  }
+}
 
 /*# sourceMappingURL=style.css.map */
