--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -336,5 +336,10 @@ h1 {
 }
 
 @media (max-width: 376px) {
-
+  h1 {
+    font-weight: 700;
+    font-size: 40px;
+    text-align: center;
+    color: #202027;
+  }
 }
